@@ -1,17 +1,5 @@
 package io.jenkins.plugins.analysis.warnings.axivion;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.InvalidPathException;
-import java.nio.file.Paths;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.auth.UsernamePasswordCredentials;
 import org.apache.http.client.utils.URIBuilder;
@@ -20,7 +8,6 @@ import com.cloudbees.plugins.credentials.CredentialsMatchers;
 import com.cloudbees.plugins.credentials.CredentialsProvider;
 import com.cloudbees.plugins.credentials.common.StandardListBoxModel;
 import com.cloudbees.plugins.credentials.common.StandardUsernamePasswordCredentials;
-import com.google.gson.JsonObject;
 
 import edu.hm.hafner.analysis.ParsingCanceledException;
 import edu.hm.hafner.analysis.ParsingException;
@@ -28,6 +15,19 @@ import edu.hm.hafner.analysis.Report;
 import edu.hm.hafner.util.VisibleForTesting;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+
+import java.io.IOException;
+import java.io.Serial;
+import java.net.MalformedURLException;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.InvalidPathException;
+import java.nio.file.Path;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 
 import org.kohsuke.stapler.AncestorInPath;
 import org.kohsuke.stapler.DataBoundConstructor;
@@ -57,6 +57,7 @@ import io.jenkins.plugins.util.LogHandler;
 /** Provides a parser and customized messages for the Axivion Suite. */
 @SuppressWarnings({"PMD.ExcessiveImports", "PMD.DataClass", "PMD.CouplingBetweenObjects", "ClassFanOutComplexity"})
 public final class AxivionSuite extends Tool {
+    @Serial
     private static final long serialVersionUID = 967222727302169818L;
     private static final String ID = "axivion-suite";
     private static final String NAME = "Axivion Suite";
@@ -94,7 +95,7 @@ public final class AxivionSuite extends Tool {
         if (o == null || getClass() != o.getClass()) {
             return false;
         }
-        AxivionSuite that = (AxivionSuite) o;
+        var that = (AxivionSuite) o;
         return projectUrl.equals(that.projectUrl) && credentialsId.equals(that.credentialsId) && basedir.equals(
                 that.basedir) && namedFilter.equals(that.namedFilter)
                 && ignoreSuppressedOrJustified == that.ignoreSuppressedOrJustified;
@@ -128,7 +129,7 @@ public final class AxivionSuite extends Tool {
     @DataBoundSetter
     public void setProjectUrl(final String projectUrl) {
         try {
-            final URL url = new URL(projectUrl);
+            final var url = new URL(projectUrl);
             this.projectUrl = new URIBuilder()
                     .setCharset(StandardCharsets.UTF_8)
                     .setHost(url.getHost())
@@ -187,20 +188,20 @@ public final class AxivionSuite extends Tool {
     @Override
     public Report scan(final Run<?, ?> run, final FilePath workspace, final Charset sourceCodeEncoding,
             final LogHandler logger) throws ParsingException, ParsingCanceledException {
-        final UsernamePasswordCredentials httpClientCredentials = withValidCredentials(run.getParent());
-        final AxivionDashboard dashboard = new RemoteAxivionDashboard(projectUrl, httpClientCredentials, namedFilter);
-        final AxivionParser.Config config = new Config(projectUrl, expandBaseDir(run, basedir),
+        final var httpClientCredentials = withValidCredentials(run.getParent());
+        final var dashboard = new RemoteAxivionDashboard(projectUrl, httpClientCredentials, namedFilter);
+        final var config = new Config(projectUrl, expandBaseDir(run, basedir),
                 ignoreSuppressedOrJustified);
-        final AxivionParser parser = new AxivionParser(config);
+        final var parser = new AxivionParser(config);
 
-        final Report report = new Report(ID, NAME);
+        final var report = new Report(ID, NAME);
         report.logInfo("Axivion webservice: %s", projectUrl);
         report.logInfo("Local basedir: %s", basedir);
         report.logInfo("Named Filter: %s", namedFilter);
         report.logInfo("Ignore suppressed or justified: %s", ignoreSuppressedOrJustified);
 
         for (AxIssueKind kind : AxIssueKind.values()) {
-            final JsonObject payload = dashboard.getIssues(kind);
+            final var payload = dashboard.getIssues(kind);
             parser.parse(report, kind, payload);
         }
 
@@ -231,7 +232,7 @@ public final class AxivionSuite extends Tool {
     private static String expandBaseDir(final Run<?, ?> run, final String baseDir) {
         String expandedBasedir;
         try {
-            EnvironmentResolver environmentResolver = new EnvironmentResolver();
+            var environmentResolver = new EnvironmentResolver();
 
             expandedBasedir =
                     environmentResolver.expandEnvironmentVariables(
@@ -325,7 +326,7 @@ public final class AxivionSuite extends Tool {
             try {
                 if (!basedir.contains("$")) {
                     // path with a variable cannot be checked at this point
-                    Paths.get(basedir);
+                    Path.of(basedir);
                 }
                 return FormValidation.ok();
             }
@@ -388,7 +389,7 @@ public final class AxivionSuite extends Tool {
         @POST
         public ListBoxModel doFillCredentialsIdItems(
                 @AncestorInPath final Item item, @QueryParameter final String credentialsId) {
-            final StandardListBoxModel result = new StandardListBoxModel();
+            final var result = new StandardListBoxModel();
             if (item == null) {
                 if (!JENKINS.hasPermission(Jenkins.ADMINISTER)) {
                     return result.includeCurrentValue(credentialsId);
